fret-electron/support/NuSMVParser/NuSMVParser.js
// *****************************************************************************
// Notices:
//
// Copyright © 2019, 2021 United States Government as represented by the Administrator
// of the National Aeronautics and Space Administration. All Rights Reserved.
//
// Disclaimers
//
// No Warranty: THE SUBJECT SOFTWARE IS PROVIDED "AS IS" WITHOUT ANY WARRANTY OF
// ANY KIND, EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED
// TO, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL CONFORM TO SPECIFICATIONS,
// ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE,
// OR FREEDOM FROM INFRINGEMENT, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL BE
// ERROR FREE, OR ANY WARRANTY THAT DOCUMENTATION, IF PROVIDED, WILL CONFORM TO
// THE SUBJECT SOFTWARE. THIS AGREEMENT DOES NOT, IN ANY MANNER, CONSTITUTE AN
// ENDORSEMENT BY GOVERNMENT AGENCY OR ANY PRIOR RECIPIENT OF ANY RESULTS,
// RESULTING DESIGNS, HARDWARE, SOFTWARE PRODUCTS OR ANY OTHER APPLICATIONS
// RESULTING FROM USE OF THE SUBJECT SOFTWARE.  FURTHER, GOVERNMENT AGENCY
// DISCLAIMS ALL WARRANTIES AND LIABILITIES REGARDING THIRD-PARTY SOFTWARE, IF
// PRESENT IN THE ORIGINAL SOFTWARE, AND DISTRIBUTES IT ''AS IS.''
//
// Waiver and Indemnity:  RECIPIENT AGREES TO WAIVE ANY AND ALL CLAIMS AGAINST
// THE UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS
// ANY PRIOR RECIPIENT.  IF RECIPIENT'S USE OF THE SUBJECT SOFTWARE RESULTS IN
// ANY LIABILITIES, DEMANDS, DAMAGES, EXPENSES OR LOSSES ARISING FROM SUCH USE,
// INCLUDING ANY DAMAGES FROM PRODUCTS BASED ON, OR RESULTING FROM, RECIPIENT'S
// USE OF THE SUBJECT SOFTWARE, RECIPIENT SHALL INDEMNIFY AND HOLD HARMLESS THE
// UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS ANY
// PRIOR RECIPIENT, TO THE EXTENT PERMITTED BY LAW.  RECIPIENT'S SOLE REMEDY FOR
// ANY SUCH MATTER SHALL BE THE IMMEDIATE, UNILATERAL TERMINATION OF THIS
// AGREEMENT.
// *****************************************************************************
// Generated from NuSMV.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var NuSMVListener = require('./NuSMVListener').NuSMVListener;
var NuSMVVisitor = require('./NuSMVVisitor').NuSMVVisitor;

var grammarFileName = "NuSMV.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'$post_condition$'", "'$action$'", "'$scope_mode$'", 
                     "'$stop_condition$'", "'$regular_condition$'", "'$action1$'", 
                     "'$action2$'", "'FTP'", "'FFin_$scope_mode$'", "'FLin_$scope_mode$'", 
                     "'Fin_$scope_mode$'", "'Lin_$scope_mode$'", "'FNin_$scope_mode$'", 
                     "'LNin_$scope_mode$'", "'$duration$'", "'$duration$+1'", 
                     "'H'", "'O'", "'<|'", "'Y'", "'S'", "'T'", "'SI'", 
                     "'G'", "'F'", "'|>'", "'X'", "'U'", "'V'", "'UI'", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'['", "','", 
                     "']'", "'('", "')'", "'!'", "'&'", "'|'", "'xor'", 
                     "'->'", "'<->'", "'FALSE'", "'TRUE'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, "ID", "UINT", "WS" ];

var ruleNames =  [ "plHolders", "durPlHolders", "proposition", "simpleExpr", 
                   "ltlExpr", "pastTimedUnaryOp", "pastUnaryOp", "pastBinaryOp", 
                   "futureTimedUnaryOp", "futureUnaryOp", "futureBinaryOp", 
                   "comparisonOp", "bound", "saltBound", "lp", "rp", "not", 
                   "and", "or", "xor", "implies", "equiv", "f", "t" ];

function NuSMVParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

NuSMVParser.prototype = Object.create(antlr4.Parser.prototype);
NuSMVParser.prototype.constructor = NuSMVParser;

Object.defineProperty(NuSMVParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

NuSMVParser.EOF = antlr4.Token.EOF;
NuSMVParser.T__0 = 1;
NuSMVParser.T__1 = 2;
NuSMVParser.T__2 = 3;
NuSMVParser.T__3 = 4;
NuSMVParser.T__4 = 5;
NuSMVParser.T__5 = 6;
NuSMVParser.T__6 = 7;
NuSMVParser.T__7 = 8;
NuSMVParser.T__8 = 9;
NuSMVParser.T__9 = 10;
NuSMVParser.T__10 = 11;
NuSMVParser.T__11 = 12;
NuSMVParser.T__12 = 13;
NuSMVParser.T__13 = 14;
NuSMVParser.T__14 = 15;
NuSMVParser.T__15 = 16;
NuSMVParser.T__16 = 17;
NuSMVParser.T__17 = 18;
NuSMVParser.T__18 = 19;
NuSMVParser.T__19 = 20;
NuSMVParser.T__20 = 21;
NuSMVParser.T__21 = 22;
NuSMVParser.T__22 = 23;
NuSMVParser.T__23 = 24;
NuSMVParser.T__24 = 25;
NuSMVParser.T__25 = 26;
NuSMVParser.T__26 = 27;
NuSMVParser.T__27 = 28;
NuSMVParser.T__28 = 29;
NuSMVParser.T__29 = 30;
NuSMVParser.T__30 = 31;
NuSMVParser.T__31 = 32;
NuSMVParser.T__32 = 33;
NuSMVParser.T__33 = 34;
NuSMVParser.T__34 = 35;
NuSMVParser.T__35 = 36;
NuSMVParser.T__36 = 37;
NuSMVParser.T__37 = 38;
NuSMVParser.T__38 = 39;
NuSMVParser.T__39 = 40;
NuSMVParser.T__40 = 41;
NuSMVParser.T__41 = 42;
NuSMVParser.T__42 = 43;
NuSMVParser.T__43 = 44;
NuSMVParser.T__44 = 45;
NuSMVParser.T__45 = 46;
NuSMVParser.T__46 = 47;
NuSMVParser.T__47 = 48;
NuSMVParser.ID = 49;
NuSMVParser.UINT = 50;
NuSMVParser.WS = 51;

NuSMVParser.RULE_plHolders = 0;
NuSMVParser.RULE_durPlHolders = 1;
NuSMVParser.RULE_proposition = 2;
NuSMVParser.RULE_simpleExpr = 3;
NuSMVParser.RULE_ltlExpr = 4;
NuSMVParser.RULE_pastTimedUnaryOp = 5;
NuSMVParser.RULE_pastUnaryOp = 6;
NuSMVParser.RULE_pastBinaryOp = 7;
NuSMVParser.RULE_futureTimedUnaryOp = 8;
NuSMVParser.RULE_futureUnaryOp = 9;
NuSMVParser.RULE_futureBinaryOp = 10;
NuSMVParser.RULE_comparisonOp = 11;
NuSMVParser.RULE_bound = 12;
NuSMVParser.RULE_saltBound = 13;
NuSMVParser.RULE_lp = 14;
NuSMVParser.RULE_rp = 15;
NuSMVParser.RULE_not = 16;
NuSMVParser.RULE_and = 17;
NuSMVParser.RULE_or = 18;
NuSMVParser.RULE_xor = 19;
NuSMVParser.RULE_implies = 20;
NuSMVParser.RULE_equiv = 21;
NuSMVParser.RULE_f = 22;
NuSMVParser.RULE_t = 23;

function PlHoldersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = NuSMVParser.RULE_plHolders;
    return this;
}

PlHoldersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PlHoldersContext.prototype.constructor = PlHoldersContext;


PlHoldersContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterPlHolders(this);
	}
};

PlHoldersContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitPlHolders(this);
	}
};

PlHoldersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitPlHolders(this);
    } else {
        return visitor.visitChildren(this);
    }
};




NuSMVParser.PlHoldersContext = PlHoldersContext;

NuSMVParser.prototype.plHolders = function() {

    var localctx = new PlHoldersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, NuSMVParser.RULE_plHolders);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << NuSMVParser.T__0) | (1 << NuSMVParser.T__1) | (1 << NuSMVParser.T__2) | (1 << NuSMVParser.T__3) | (1 << NuSMVParser.T__4) | (1 << NuSMVParser.T__5) | (1 << NuSMVParser.T__6) | (1 << NuSMVParser.T__7) | (1 << NuSMVParser.T__8) | (1 << NuSMVParser.T__9) | (1 << NuSMVParser.T__10) | (1 << NuSMVParser.T__11) | (1 << NuSMVParser.T__12) | (1 << NuSMVParser.T__13))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DurPlHoldersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = NuSMVParser.RULE_durPlHolders;
    return this;
}

DurPlHoldersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DurPlHoldersContext.prototype.constructor = DurPlHoldersContext;


DurPlHoldersContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterDurPlHolders(this);
	}
};

DurPlHoldersContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitDurPlHolders(this);
	}
};

DurPlHoldersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitDurPlHolders(this);
    } else {
        return visitor.visitChildren(this);
    }
};




NuSMVParser.DurPlHoldersContext = DurPlHoldersContext;

NuSMVParser.prototype.durPlHolders = function() {

    var localctx = new DurPlHoldersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, NuSMVParser.RULE_durPlHolders);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        _la = this._input.LA(1);
        if(!(_la===NuSMVParser.T__14 || _la===NuSMVParser.T__15)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function PropositionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = NuSMVParser.RULE_proposition;
    return this;
}

PropositionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PropositionContext.prototype.constructor = PropositionContext;

PropositionContext.prototype.ID = function() {
    return this.getToken(NuSMVParser.ID, 0);
};

PropositionContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterProposition(this);
	}
};

PropositionContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitProposition(this);
	}
};

PropositionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitProposition(this);
    } else {
        return visitor.visitChildren(this);
    }
};




NuSMVParser.PropositionContext = PropositionContext;

NuSMVParser.prototype.proposition = function() {

    var localctx = new PropositionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, NuSMVParser.RULE_proposition);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 52;
        this.match(NuSMVParser.ID);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SimpleExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = NuSMVParser.RULE_simpleExpr;
    return this;
}

SimpleExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SimpleExprContext.prototype.constructor = SimpleExprContext;

SimpleExprContext.prototype.proposition = function() {
    return this.getTypedRuleContext(PropositionContext,0);
};

SimpleExprContext.prototype.plHolders = function() {
    return this.getTypedRuleContext(PlHoldersContext,0);
};

SimpleExprContext.prototype.t = function() {
    return this.getTypedRuleContext(TContext,0);
};

SimpleExprContext.prototype.f = function() {
    return this.getTypedRuleContext(FContext,0);
};

SimpleExprContext.prototype.lp = function() {
    return this.getTypedRuleContext(LpContext,0);
};

SimpleExprContext.prototype.simpleExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SimpleExprContext);
    } else {
        return this.getTypedRuleContext(SimpleExprContext,i);
    }
};

SimpleExprContext.prototype.rp = function() {
    return this.getTypedRuleContext(RpContext,0);
};

SimpleExprContext.prototype.not = function() {
    return this.getTypedRuleContext(NotContext,0);
};

SimpleExprContext.prototype.and = function() {
    return this.getTypedRuleContext(AndContext,0);
};

SimpleExprContext.prototype.or = function() {
    return this.getTypedRuleContext(OrContext,0);
};

SimpleExprContext.prototype.xor = function() {
    return this.getTypedRuleContext(XorContext,0);
};

SimpleExprContext.prototype.implies = function() {
    return this.getTypedRuleContext(ImpliesContext,0);
};

SimpleExprContext.prototype.equiv = function() {
    return this.getTypedRuleContext(EquivContext,0);
};

SimpleExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterSimpleExpr(this);
	}
};

SimpleExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitSimpleExpr(this);
	}
};

SimpleExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitSimpleExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};



NuSMVParser.prototype.simpleExpr = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new SimpleExprContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 6;
    this.enterRecursionRule(localctx, 6, NuSMVParser.RULE_simpleExpr, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case NuSMVParser.ID:
            this.state = 55;
            this.proposition();
            break;
        case NuSMVParser.T__0:
        case NuSMVParser.T__1:
        case NuSMVParser.T__2:
        case NuSMVParser.T__3:
        case NuSMVParser.T__4:
        case NuSMVParser.T__5:
        case NuSMVParser.T__6:
        case NuSMVParser.T__7:
        case NuSMVParser.T__8:
        case NuSMVParser.T__9:
        case NuSMVParser.T__10:
        case NuSMVParser.T__11:
        case NuSMVParser.T__12:
        case NuSMVParser.T__13:
            this.state = 56;
            this.plHolders();
            break;
        case NuSMVParser.T__47:
            this.state = 57;
            this.t();
            break;
        case NuSMVParser.T__46:
            this.state = 58;
            this.f();
            break;
        case NuSMVParser.T__38:
            this.state = 59;
            this.lp();
            this.state = 60;
            this.simpleExpr(0);
            this.state = 61;
            this.rp();
            break;
        case NuSMVParser.T__40:
            this.state = 63;
            this.not();
            this.state = 64;
            this.simpleExpr(6);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 90;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 88;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new SimpleExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, NuSMVParser.RULE_simpleExpr);
                    this.state = 68;
                    if (!( this.precpred(this._ctx, 5))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
                    }
                    this.state = 69;
                    this.and();
                    this.state = 70;
                    this.simpleExpr(6);
                    break;

                case 2:
                    localctx = new SimpleExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, NuSMVParser.RULE_simpleExpr);
                    this.state = 72;
                    if (!( this.precpred(this._ctx, 4))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                    }
                    this.state = 73;
                    this.or();
                    this.state = 74;
                    this.simpleExpr(5);
                    break;

                case 3:
                    localctx = new SimpleExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, NuSMVParser.RULE_simpleExpr);
                    this.state = 76;
                    if (!( this.precpred(this._ctx, 3))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                    }
                    this.state = 77;
                    this.xor();
                    this.state = 78;
                    this.simpleExpr(4);
                    break;

                case 4:
                    localctx = new SimpleExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, NuSMVParser.RULE_simpleExpr);
                    this.state = 80;
                    if (!( this.precpred(this._ctx, 2))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                    }
                    this.state = 81;
                    this.implies();
                    this.state = 82;
                    this.simpleExpr(3);
                    break;

                case 5:
                    localctx = new SimpleExprContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, NuSMVParser.RULE_simpleExpr);
                    this.state = 84;
                    if (!( this.precpred(this._ctx, 1))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 85;
                    this.equiv();
                    this.state = 86;
                    this.simpleExpr(2);
                    break;

                } 
            }
            this.state = 92;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function LtlExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = NuSMVParser.RULE_ltlExpr;
    return this;
}

LtlExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LtlExprContext.prototype.constructor = LtlExprContext;


 
LtlExprContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function BinaryBoundedPastOpContext(parser, ctx) {
	LtlExprContext.call(this, parser);
    LtlExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BinaryBoundedPastOpContext.prototype = Object.create(LtlExprContext.prototype);
BinaryBoundedPastOpContext.prototype.constructor = BinaryBoundedPastOpContext;

NuSMVParser.BinaryBoundedPastOpContext = BinaryBoundedPastOpContext;

BinaryBoundedPastOpContext.prototype.ltlExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LtlExprContext);
    } else {
        return this.getTypedRuleContext(LtlExprContext,i);
    }
};

BinaryBoundedPastOpContext.prototype.pastBinaryOp = function() {
    return this.getTypedRuleContext(PastBinaryOpContext,0);
};

BinaryBoundedPastOpContext.prototype.bound = function() {
    return this.getTypedRuleContext(BoundContext,0);
};
BinaryBoundedPastOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterBinaryBoundedPastOp(this);
	}
};

BinaryBoundedPastOpContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitBinaryBoundedPastOp(this);
	}
};

BinaryBoundedPastOpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitBinaryBoundedPastOp(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function BinaryBoundedFutureOpContext(parser, ctx) {
	LtlExprContext.call(this, parser);
    LtlExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

BinaryBoundedFutureOpContext.prototype = Object.create(LtlExprContext.prototype);
BinaryBoundedFutureOpContext.prototype.constructor = BinaryBoundedFutureOpContext;

NuSMVParser.BinaryBoundedFutureOpContext = BinaryBoundedFutureOpContext;

BinaryBoundedFutureOpContext.prototype.ltlExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LtlExprContext);
    } else {
        return this.getTypedRuleContext(LtlExprContext,i);
    }
};

BinaryBoundedFutureOpContext.prototype.futureBinaryOp = function() {
    return this.getTypedRuleContext(FutureBinaryOpContext,0);
};

BinaryBoundedFutureOpContext.prototype.bound = function() {
    return this.getTypedRuleContext(BoundContext,0);
};
BinaryBoundedFutureOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterBinaryBoundedFutureOp(this);
	}
};

BinaryBoundedFutureOpContext.prototype.exitRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.exitBinaryBoundedFutureOp(this);
	}
};

BinaryBoundedFutureOpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof NuSMVVisitor ) {
        return visitor.visitBinaryBoundedFutureOp(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function TimedBinarySaltPastOpContext(parser, ctx) {
	LtlExprContext.call(this, parser);
    LtlExprContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TimedBinarySaltPastOpContext.prototype = Object.create(LtlExprContext.prototype);
TimedBinarySaltPastOpContext.prototype.constructor = TimedBinarySaltPastOpContext;

NuSMVParser.TimedBinarySaltPastOpContext = TimedBinarySaltPastOpContext;

TimedBinarySaltPastOpContext.prototype.ltlExpr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LtlExprContext);
    } else {
        return this.getTypedRuleContext(LtlExprContext,i);
    }
};

TimedBinarySaltPastOpContext.prototype.pastBinaryOp = function() {
    return this.getTypedRuleContext(PastBinaryOpContext,0);
};

TimedBinarySaltPastOpContext.prototype.saltBound = function() {
    return this.getTypedRuleContext(SaltBoundContext,0);
};
TimedBinarySaltPastOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof NuSMVListener ) {
        listener.enterTimedBinarySaltPastOp(this);
	}
};
